[package]
name = "smokesim"
version = "0.1.0"
authors = ["Hariharan <github@mail.cvhariharan.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5.0", features = ["dynamic"] }
rand = "0.8.0"
bevy_prototype_lyon = "0.3.1"